--- a/partials/status.html
+++ b/partials/status.html
@@ -1,4 +1,37 @@
-<h5><a ui-sref="students">add students</a></h5>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <h5><a ui-sref="students">add students</a></h5>
 <h5><a ui-sref="signin">sign in & out</a></h5>
 <h5><a ui-sref="status">who's here</a></h5>
 
@@ -18,4 +51,4 @@
     <li ng-repeat="item in studentsSignedIn = (students | filter:{signedIn: true})">
         {{ item.name }}
   </li>
-</ul>
+</ul> -->
