--- a/partials/home.html
+++ b/partials/home.html
@@ -1,12 +1,16 @@
 <h1>Please enter the first digit in your zip-code</h1>
 
-<form ng-submit="ZipCodeFactory.addFirstChar()" class="form-inline" role="form">
+<!-- <form ng-submit="ZipCodeFactory.addFirstChar()" class="form-inline" role="form">
   <div class="form-group">
       <input type="text" ng-model="ZipCodeFactory.studentName" class="form-control">
-  </div>
+  </div> -->
+
   <!-- // potentially might want to data-bind to the first municipality offering &
   // have it appear even before the user submits the number? -->
-  <button type="submit" class="btn btn-default">Submit</button>
+
+  <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+
+ <h3><a ui-sref="zipcodes">Click here to view all zip-codes</a></h3>
 
 
 
