--- a/partials/zipcodes.html
+++ b/partials/zipcodes.html
@@ -1,18 +1,11 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div ng-show="zipCodes.length">
+    <h4>List of Zip-Codes:</h4>
+    <ul>
+        <li ng-repeat="item in zipCodes">
+            {{ item.name }}
+        </li>
+    </ul>
+</div>
 
 
 
