--- a/partials/zipcodes.html
+++ b/partials/zipcodes.html
@@ -1,8 +1,8 @@
-<div ng-show="zipCodes.length">
+<div ng-show="allZipCodes.length">
     <h4>List of Zip-Codes:</h4>
     <ul>
-        <li ng-repeat="item in zipCodes">
-            {{ item.name }}
+        <li ng-repeat="item in allZipCodes">
+            {{ item.City }}
         </li>
     </ul>
 </div>
