testZipCodes prints to screen

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,34 +1,3 @@
-<h1>Please enter the first digit in your zip-code</h1>
-
-<!-- <form ng-submit="ZipCodeFactory.addFirstChar()" class="form-inline" role="form">
-  <div class="form-group">
-      <input type="text" ng-model="ZipCodeFactory.studentName" class="form-control">
-  </div> -->
-
-  <!-- // potentially might want to data-bind to the first municipality offering &
-  // have it appear even before the user submits the number? -->
-
-  <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+<!-- <h1>Please enter the first digit in your zip-code</h1> -->
 
  <h3><a ui-sref="zipcodes">Click here to view all zip-codes</a></h3>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <h3>WELCOME!</h3>
-<h4>STUDENT SIGN-IN</h4>
-
-
-<h4><a ui-sref="students">Click here to add Students</a></h4>
-<h4><a ui-sref="signin">Click here to sign Students in and out</a></h4>
-<h4><a ui-sref="status">Click here to see who's here and not here</a></h4> -->
