--- a/partials/zipcodes.html
+++ b/partials/zipcodes.html
@@ -2,7 +2,7 @@
     <h4>List of Zip-Codes:</h4>
     <ul>
         <li ng-repeat="item in allZipCodes">
-            {{ item.City }}
+            {{ item.city }}
         </li>
     </ul>
 </div>
