--- a/partials/home.html
+++ b/partials/home.html
@@ -1,3 +1,13 @@
 <!-- <h1>Please enter the first digit in your zip-code</h1> -->
 
  <h3><a ui-sref="zipcodes">Click here to view all zip-codes</a></h3>
+
+
+
+ <!-- <form ng-submit="addFirstDigit()" class="form-inline" role="form">
+   <div class="form-group">
+     <input type="number" ng-model="firstDigit" class="form-control"
+     placeholder="Enter the first digit of your Zip Code!">
+   </div>
+   <button type="submit" class="btn btn-default" ui-sref="zipcodes">Submit</button>
+ </form> -->
