organize file structure

--- a/partials/guesses.html
+++ b/partials/guesses.html
@@ -1,8 +1,18 @@
-<div ng-show="allZipCodes.length">
+<div>
+    <h1>Do you live in XXXXX</h1>
+</div>
+
+
+
+
+
+
+
+<!-- <div ng-show="allZipCodes.length">
     <h4>List of Zip-Codes:</h4>
     <ul>
         <li ng-repeat="item in allZipCodes">
             {{ item.city }}
         </li>
     </ul>
-</div>
+</div> -->
