--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,7 @@
  <!-- <h3><a ui-sref="zipcodes">Click here to view all zip-codes</a></h3> -->
 
 
-<div class="form-group">
+<div class="form-group" class="inputs">
     <input ng-change="detectChangeDigit1()" type="number" maxlength="1" min="0" max="9" ng-model="zipCode.firstDigit" class="form-control">
     <input ng-change="detectChangeDigit2()" type="number" maxlength="1" min="0" max="9" ng-model="zipCode.secondDigit" class="form-control">
     <input ng-change="detectChangeDigit3()" type="number" maxlength="1" min="0" max="9" ng-model="zipCode.thirdDigit" class="form-control">
