--- a/partials/home.html
+++ b/partials/home.html
@@ -18,12 +18,36 @@
 </div>
 
 
-<div class="zips-display">
+<!-- <div class="zips-display">
 
   <div class="D1">
+    <ul>
+      <li ng-repeat="zipCode in matchedDigit1Array">{{ zipCode.city }}, {{ zipCode.state }}</li>
+    </ul>
+  </div>
+
+  <div class="D2">
+    <ul>
+      <li ng-repeat="zipCode in matchedDigit2Array">{{ zipCode.city }}</li>
+    </ul>
+  </div>
+
+  <div class="D3">
+    <ul>
+      <li ng-repeat="zipCode in matchedDigit3Array">{{ zipCode.city }}</li>
+    </ul>
+  </div>
+
+  <div class="D4">
     <ul>
       <li ng-repeat="zipCode in matchedDigit4Array">{{ zipCode.city }}</li>
     </ul>
   </div>
 
-</div>
+  <div class="D5">
+    <ul>
+      <li ng-repeat="zipCode in matchedDigit5Array">{{ zipCode.city }}</li>
+    </ul>
+  </div>
+
+</div> -->
