--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,9 @@ input[type="number"] {
 .zips-display {
   display: inline;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
